--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,8 @@
             "tab"
         ],
         "linebreak-style": [
-            "error",
-            "unix"
+            "off",
+            "windows"
         ],
         "quotes": [
             "error",
